--- a/markup/addsales.html
+++ b/markup/addsales.html
@@ -103,6 +103,15 @@
 						</li>
 						<li class="has-drop">
 							<div class="knav">
+								<a href="media.html">
+									<span class="icon-filter_list"></span>
+									<span class="txt">Media</span>
+								</a>
+								<button type="button"><span class="icon-keyboard_arrow_right"></span></button>
+							</div>
+						</li>
+						<li class="has-drop">
+							<div class="knav">
 								<a href="manageuser.html">
 									<span class="icon-setting"></span>
 									<span class="txt">Manage User</span>
@@ -147,55 +156,55 @@
 														<input type="submit" class="button tertiary-line" value="Discard">
 													</div>
 													<div class="form__action">
-													</span><input type="submit" class="button primary-tint" value="Save">
+														<input type="submit" class="button primary-tint" value="Save">
+													</div>
+												</div>
+											</form>
+										</div>
+									</div>
+								</div>
+								<form class="general--form access__form">
+									<div class="row">
+										<div class="col xs-12 sm-3">
+											<div class="form__module">
+												<label for="prodname" class="form__label">Product Name</label>
+												<div class="form__set">
+													<input type="text" id="prodname" placeholder="Product Name">
 												</div>
 											</div>
-										</form>
+										</div>
+										<div class="col xs-12 sm-3">
+											<div class="form__module">
+												<label for="saleqty" class="form__label">Quantity</label>
+												<div class="form__set">
+													<input type="tel" id="saleqty" placeholder="Quantity">
+												</div>
+											</div>
+										</div>
+										<div class="col xs-12 sm-3">
+											<div class="form__module">
+												<label for="saletot" class="form__label">Total</label>
+												<div class="form__set">
+													<input type="tel" id="saletot" placeholder="Amount">
+												</div>
+											</div>
+										</div>
+										<div class="col xs-12 sm-3">
+											<div class="form__module">
+												<label for="saleAD" class="form__label">Date</label>
+												<div class="form__set">
+													<input type="date" id="saleAD">
+												</div>
+											</div>
+										</div>
 									</div>
-								</div>
+								</form>
 							</div>
-							<form class="general--form access__form">
-								<div class="row">
-									<div class="col xs-12 sm-3">
-										<div class="form__module">
-											<label for="prodname" class="form__label">Product Name</label>
-											<div class="form__set">
-												<input type="text" id="prodname" placeholder="Product Name">
-											</div>
-										</div>
-									</div>
-									<div class="col xs-12 sm-3">
-										<div class="form__module">
-											<label for="saleqty" class="form__label">Quantity</label>
-											<div class="form__set">
-												<input type="tel" id="saleqty" placeholder="Quantity">
-											</div>
-										</div>
-									</div>
-									<div class="col xs-12 sm-3">
-										<div class="form__module">
-											<label for="saletot" class="form__label">Total</label>
-											<div class="form__set">
-												<input type="tel" id="saletot" placeholder="Amount">
-											</div>
-										</div>
-									</div>
-									<div class="col xs-12 sm-3">
-										<div class="form__module">
-											<label for="saleAD" class="form__label">Date</label>
-											<div class="form__set">
-												<input type="date" id="saleAD">
-											</div>
-										</div>
-									</div>
-								</div>
-							</form>
 						</div>
 					</div>
 				</div>
-			</div>
-		</section>
-	</main>
+			</section>
+		</main>
 			<!-- <footer class="site__footer">
 				<span class="copy">&copy; Copyright</span>
 			</footer> -->
