--- a/markup/adm_dashboard.html
+++ b/markup/adm_dashboard.html
@@ -75,7 +75,7 @@
 									<span class="icon-evaluation"></span>
 									<span class="txt">Sale Report</span>
 								</a>
-								<button type="button"><span class="icon-arrow-right"></span></button>
+								<button type="button"><span class="icon-keyboard_arrow_right"></span></button>
 							</div>
 						</li>
 						<li class="has-drop">
@@ -84,7 +84,7 @@
 									<span class="icon-product"></span>
 									<span class="txt">Product</span>
 								</a>
-								<button type="button"><span class="icon-arrow-right"></span></button>
+								<button type="button"><span class="icon-keyboard_arrow_right"></span></button>
 							</div>
 							<div class="kdrop">
 								<ul>
@@ -98,7 +98,16 @@
 									<span class="icon-order"></span>
 									<span class="txt">Orders</span>
 								</a>
-								<button type="button"><span class="icon-arrow-right"></span></button>
+								<button type="button"><span class="icon-keyboard_arrow_right"></span></button>
+							</div>
+						</li>
+						<li class="has-drop">
+							<div class="knav">
+								<a href="media.html">
+									<span class="icon-filter_list"></span>
+									<span class="txt">Media</span>
+								</a>
+								<button type="button"><span class="icon-keyboard_arrow_right"></span></button>
 							</div>
 						</li>
 						<li class="has-drop">
@@ -107,7 +116,7 @@
 									<span class="icon-setting"></span>
 									<span class="txt">Manage User</span>
 								</a>
-								<button type="button"><span class="icon-arrow-right"></span></button>
+								<button type="button"><span class="icon-keyboard_arrow_right"></span></button>
 							</div>
 							<div class="kdrop">
 								<ul>
@@ -121,7 +130,7 @@
 									<span class="icon-logout"></span>
 									<span class="txt">Log Out</span>
 								</a>
-								<button type="button"><span class="icon-arrow-right"></span></button>
+								<button type="button"><span class="icon-keyboard_arrow_right"></span></button>
 							</div>
 						</li>
 					</ul>
@@ -152,12 +161,7 @@
 														<h1>5</h1>
 													</div>
 													<div class="progress">
-														<svg>
-															<circle cx="26" cy="26" r="26"></circle>
-														</svg>
-														<div class="number">
-															<p>81%</p>
-														</div>
+														<span class="icon-user"></span>
 													</div>
 												</div>
 												<small class="text-muted">Last 24 hours</small>
@@ -173,12 +177,7 @@
 														<h1>7</h1>
 													</div>
 													<div class="progress">
-														<svg>
-															<circle cx="26" cy="26" r="26"></circle>
-														</svg>
-														<div class="number">
-															<p>81%</p>
-														</div>
+														<span class="icon-filter_list"></span>
 													</div>
 												</div>
 												<small class="text-muted">Last 24 hours</small>
@@ -194,12 +193,7 @@
 														<h1>8</h1>
 													</div>
 													<div class="progress">
-														<svg>
-															<circle cx="26" cy="26" r="26"></circle>
-														</svg>
-														<div class="number">
-															<p>62%</p>
-														</div>
+														<span class="icon-product"></span>
 													</div>
 												</div>
 												<small class="text-muted">Last 24 hours</small>
@@ -215,12 +209,7 @@
 														<h1>1000</h1>
 													</div>
 													<div class="progress">
-														<svg>
-															<circle cx="26" cy="26" r="26"></circle>
-														</svg>
-														<div class="number">
-															<p>44%</p>
-														</div>
+														<span class="icon-receipt"></span>
 													</div>
 												</div>
 												<small class="text-muted">Last 24 hours</small>
