--- a/markup/inventory.html
+++ b/markup/inventory.html
@@ -52,80 +52,89 @@
 					<button type="submit"><span class="icon-search"></span></button>
 				</form>
 				<nav class="site__nav">
-					<ul>
-						<li>
-							<div class="knav">
-								<a href="adm_dashboard.html">
-									<span class="icon-dashboard"></span>
-									<span class="txt">Dashboard</span>
-								</a>
-							</div>
-						</li>
-						<li >
-							<div class="knav">
-								<a href="inventory.html">
-									<span class="icon-inventory"></span>
-									<span class="txt">Inventory</span>
-								</a>
-							</div>
-						</li>
-						<li class="has-drop">
-							<div class="knav">
-								<a href="report.html">
-									<span class="icon-evaluation"></span>
-									<span class="txt">Sale Report</span>
-								</a>
-								<button type="button"><span class="icon-arrow-right"></span></button>
-							</div>
-						</li>
-						<li class="has-drop">
-							<div class="knav">
-								<a href="product.html">
-									<span class="icon-product"></span>
-									<span class="txt">Product</span>
-								</a>
-								<button type="button"><span class="icon-arrow-right"></span></button>
-							</div>
-							<div class="kdrop">
-								<ul>
-									<li><a href="category.html">Category</a></li>
-								</ul>
-							</div>
-						</li>
-						<li class="has-drop">
-							<div class="knav">
-								<a href="orders.html">
-									<span class="icon-order"></span>
-									<span class="txt">Orders</span>
-								</a>
-								<button type="button"><span class="icon-arrow-right"></span></button>
-							</div>
-						</li>
-						<li class="has-drop">
-							<div class="knav">
-								<a href="manageuser.html">
-									<span class="icon-setting"></span>
-									<span class="txt">Manage User</span>
-								</a>
-								<button type="button"><span class="icon-arrow-right"></span></button>
-							</div>
-							<div class="kdrop">
-								<ul>
-									<li><a href="addgroup.html">Add group</a></li>
-								</ul>
-							</div>
-						</li>
-						<li class="has-drop">
-							<div class="knav">
-								<a href="login.html">
-									<span class="icon-logout"></span>
-									<span class="txt">Log Out</span>
-								</a>
-								<button type="button"><span class="icon-arrow-right"></span></button>
-							</div>
-						</li>
-					</ul>
-				</nav>
+						<ul>
+							<li>
+								<div class="knav">
+									<a href="adm_dashboard.html">
+										<span class="icon-dashboard"></span>
+										<span class="txt">Dashboard</span>
+									</a>
+								</div>
+							</li>
+							<li >
+								<div class="knav">
+									<a href="inventory.html">
+										<span class="icon-inventory"></span>
+										<span class="txt">Inventory</span>
+									</a>
+								</div>
+							</li>
+							<li class="has-drop">
+								<div class="knav">
+									<a href="report.html">
+										<span class="icon-evaluation"></span>
+										<span class="txt">Sale Report</span>
+									</a>
+									<button type="button"><span class="icon-arrow-right"></span></button>
+								</div>
+							</li>
+							<li class="has-drop">
+								<div class="knav">
+									<a href="product.html">
+										<span class="icon-product"></span>
+										<span class="txt">Product</span>
+									</a>
+									<button type="button"><span class="icon-arrow-right"></span></button>
+								</div>
+								<div class="kdrop">
+									<ul>
+										<li><a href="category.html">Category</a></li>
+									</ul>
+								</div>
+							</li>
+							<li class="has-drop">
+								<div class="knav">
+									<a href="orders.html">
+										<span class="icon-order"></span>
+										<span class="txt">Orders</span>
+									</a>
+									<button type="button"><span class="icon-arrow-right"></span></button>
+								</div>
+							</li>
+							<li class="has-drop">
+								<div class="knav">
+									<a href="media.html">
+										<span class="icon-filter_list"></span>
+										<span class="txt">Media</span>
+									</a>
+									<button type="button"><span class="icon-keyboard_arrow_right"></span></button>
+								</div>
+							</li>
+							<li class="has-drop">
+								<div class="knav">
+									<a href="manageuser.html">
+										<span class="icon-setting"></span>
+										<span class="txt">Manage User</span>
+									</a>
+									<button type="button"><span class="icon-arrow-right"></span></button>
+								</div>
+								<div class="kdrop">
+									<ul>
+										<li><a href="addgroup.html">Add group</a></li>
+									</ul>
+								</div>
+							</li>
+							<li class="has-drop">
+								<div class="knav">
+									<a href="login.html">
+										<span class="icon-logout"></span>
+										<span class="txt">Log Out</span>
+									</a>
+									<button type="button"><span class="icon-arrow-right"></span></button>
+								</div>
+							</li>
+						</ul>
+					</nav>
 			</aside>
 			<section class="workboard inventorypg">
 				<div class="workboard__heading">
@@ -355,7 +364,7 @@
 								</table>
 							</div>
 						</div>
-						<div class="pagination">
+						<!-- <div class="pagination">
 							<ul class="paging">
 								<li><a href="#"><span class="icon-keyboard_arrow_left"></span class=""></a></li>
 								<li><a href="#">1</a></li>
@@ -364,7 +373,7 @@
 								<li><a href="#">4</a></li>
 								<li><a href="#"><span class="icon-keyboard_arrow_right"></span></a></li>
 							</ul>
-						</div>
+						</div> -->
 					</div>
 				</div>
 
