--- a/markup/media.html
+++ b/markup/media.html
@@ -43,7 +43,7 @@
 					</div>
 				</div>
 			</header>
-			<main id="site__main" class="site__main profile__main">
+			<main id="site__main" class="site__main media__main">
 				<aside class="worksidebar">
 					<form class="general--form pnlsearch__form">
 						<div class="form__set">
@@ -138,7 +138,7 @@
 				</aside>
 				<section class="workboard inventorypg">
 					<div class="workboard__heading">
-						<h1 class="workboard__title">Profile</h1>
+						<h1 class="workboard__title">Media</h1>
 					</div>
 					<div class="workpanel">
 						<div class="row">
@@ -147,17 +147,17 @@
 									<div class="row">
 										<div class="col xs-12 sm-4">
 											<div class="form__module">
-												<label for="name" class="form__label">Name</label>
+												<label for="photoname" class="form__label">Photo Name</label>
 												<div class="form__set">
-													<input type="text" id="name" placeholder="Name">
+													<input type="text" id="photoname" placeholder="Photo Name">
 												</div>
 											</div>
 										</div>
 										<div class="col xs-12 sm-4">
 											<div class="form__module">
-												<label for="Username" class="form__label">Username</label>
+												<label for="phototyp" class="form__label">Photo Type</label>
 												<div class="form__set">
-													<input type="tel" id="Username" placeholder="Username">
+													<input type="text" id="phototyp" placeholder="Photo Type">
 												</div>
 											</div>
 										</div>
@@ -166,7 +166,7 @@
 										<div class="col xs-12 sm-5">
 											<div class="site-panel">
 												<div class="form__action">
-													<input type="submit" class="button tertiary-line" value="Reset Password">
+													<input type="submit" class="button tertiary-line" value="Discard">
 												</div>
 												<div class="form__action">
 													<input type="submit" class="button primary-tint" value="Save">
@@ -190,10 +190,86 @@
 								</div>
 							</div>
 						</div>
+						<div class="meta-info">
+							<div class="row">
+								<div class="col xs-12 sm-6">
+									<div class="dropdown">
+										<select name="" id="">
+											<option value="">September, 2024 </option>
+											<option value="">October, 2024 </option>
+											<option value="">November, 2024 </option>
+											<option value="">December, 2024 </option>
+											<option value="">January, 2024 </option>
+											<option value="">Feburary, 2024 </option>
+											<option value="">March, 2024 </option>
+											<option value="">April, 2024 </option>
+											<option value="">May, 2024 </option>
+											<option value="">June, 2024 </option>
+											<option value="">July, 2024 </option>
+											<option value="">August, 2024 </option>
+										</select>
+									</div>
+								</div>
+								<div class="col xs-12 sm-6">
+									<form action="get">
+										<div class="site-panel">
+											<div class="form__module">
+												<div class="form__set ">
+													<span class="icon-search"></span>
+													<input class="search-input" type="search" placeholder="Search">
+												</div>
+											</div>
+											<div class="downoad">
+												<a href=""><span class="icon-download"></span>Download</a>
+											</div>
+										</div>
+									</form>
+								</div>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col xs-12">
+								<div class="questionaries__showcase" id="question_popup" style="display: flex;">
+									<div class="tbl-wrap">
+										<table id="tracking__table">
+											<thead>
+												<tr>
+													<th class="dtser">S.N</th>
+													<th>Photo</th>
+													<th>Photo Name</th>
+													<th>Photo Type</th>
+													<th>Action</th>
+												</tr>
+											</thead>
+											<tbody>
+												<tr>
+													<td data-label="S.N">1</td>
+													<td data-label="Photo"><div class="profile--img">
+														<img src="images/img1.svg" alt="profileimg">
+													</div></td>
+													<td data-label="Photo Name">Wheat</td>
+													<td data-label="Photo Type">photo type</td>
+													<td data-label="Action"><a href="inview.html"><span class="icon-trash"></span></a><a href="#"><span class="icon-edit"></span></a></td>
+												</tr>
+											</tbody>
+										</table>
+									</div>
+								</div>
+								<!-- <div class="pagination">
+									<ul class="paging">
+										<li><a href="#"><span class="icon-keyboard_arrow_left"></span class=""></a></li>
+										<li><a href="#">1</a></li>
+										<li><a href="#">2</a></li>
+										<li><a href="#">3</a></li>
+										<li><a href="#">4</a></li>
+										<li><a href="#"><span class="icon-keyboard_arrow_right"></span></a></li>
+									</ul>
+								</div> -->
+							</div>
+						</div>
 					</div>
-				</div>
-			</section>
-		</main>
+				</section>
+			</main>
 			<!-- <footer class="site__footer">
 				<span class="copy">&copy; Copyright</span>
 			</footer> -->
