--- a/markup/media.html
+++ b/markup/media.html
@@ -142,53 +142,19 @@
 					</div>
 					<div class="workpanel">
 						<div class="row">
-							<div class="col xs-12 sm-9">
+							<div class="col xs-12">
 								<form class="general--form access__form">
-									<div class="row">
-										<div class="col xs-12 sm-4">
-											<div class="form__module">
-												<label for="photoname" class="form__label">Photo Name</label>
-												<div class="form__set">
-													<input type="text" id="photoname" placeholder="Photo Name">
-												</div>
-											</div>
-										</div>
-										<div class="col xs-12 sm-4">
-											<div class="form__module">
-												<label for="phototyp" class="form__label">Photo Type</label>
-												<div class="form__set">
-													<input type="text" id="phototyp" placeholder="Photo Type">
-												</div>
-											</div>
-										</div>
-									</div>
-									<div class="row">
-										<div class="col xs-12 sm-5">
-											<div class="site-panel">
-												<div class="form__action">
-													<input type="submit" class="button tertiary-line" value="Discard">
-												</div>
-												<div class="form__action">
-													<input type="submit" class="button primary-tint" value="Save">
-												</div>
-											</div>
+									<div class="profile__img">
+										<div class="upload">
+											<label for="file-upload" class="custom-photo-upload primary-tint">
+												Upload
+											</label>
+											<input type="file" id="file-upload">
 										</div>
 									</div>
 								</form>
 							</div>
-							<div class="col xs-12 sm-3">
-								<div class="profile__img">
-									<div class="profile--img">
-										<img src="images/img1.svg" alt="profileimg">
-									</div>
-									<div class="upload">
-										<label for="file-upload" class="custom-photo-upload primary-tint">
-											Upload
-										</label>
-										<input type="file" id="file-upload">
-									</div>
-								</div>
-							</div>
+							
 						</div>
 						<div class="meta-info">
 							<div class="row">
