--- a/markup/product.html
+++ b/markup/product.html
@@ -52,89 +52,89 @@
 					<button type="submit"><span class="icon-search"></span></button>
 				</form>
 				<nav class="site__nav">
-						<ul>
-							<li>
-								<div class="knav">
-									<a href="adm_dashboard.html">
-										<span class="icon-dashboard"></span>
-										<span class="txt">Dashboard</span>
-									</a>
-								</div>
-							</li>
-							<li >
-								<div class="knav">
-									<a href="inventory.html">
-										<span class="icon-inventory"></span>
-										<span class="txt">Inventory</span>
-									</a>
-								</div>
-							</li>
-							<li class="has-drop">
-								<div class="knav">
-									<a href="report.html">
-										<span class="icon-evaluation"></span>
-										<span class="txt">Sale Report</span>
-									</a>
-									<button type="button"><span class="icon-arrow-right"></span></button>
-								</div>
-							</li>
-							<li class="has-drop">
-								<div class="knav">
-									<a href="product.html">
-										<span class="icon-product"></span>
-										<span class="txt">Product</span>
-									</a>
-									<button type="button"><span class="icon-arrow-right"></span></button>
-								</div>
-								<div class="kdrop">
-									<ul>
-										<li><a href="category.html">Category</a></li>
-									</ul>
-								</div>
-							</li>
-							<li class="has-drop">
-								<div class="knav">
-									<a href="orders.html">
-										<span class="icon-order"></span>
-										<span class="txt">Orders</span>
-									</a>
-									<button type="button"><span class="icon-arrow-right"></span></button>
-								</div>
-							</li>
-							<li class="has-drop">
-								<div class="knav">
-									<a href="media.html">
-										<span class="icon-filter_list"></span>
-										<span class="txt">Media</span>
-									</a>
-									<button type="button"><span class="icon-keyboard_arrow_right"></span></button>
-								</div>
-							</li>
-							<li class="has-drop">
-								<div class="knav">
-									<a href="manageuser.html">
-										<span class="icon-setting"></span>
-										<span class="txt">Manage User</span>
-									</a>
-									<button type="button"><span class="icon-arrow-right"></span></button>
-								</div>
-								<div class="kdrop">
-									<ul>
-										<li><a href="addgroup.html">Add group</a></li>
-									</ul>
-								</div>
-							</li>
-							<li class="has-drop">
-								<div class="knav">
-									<a href="login.html">
-										<span class="icon-logout"></span>
-										<span class="txt">Log Out</span>
-									</a>
-									<button type="button"><span class="icon-arrow-right"></span></button>
-								</div>
-							</li>
-						</ul>
-					</nav>
+					<ul>
+						<li>
+							<div class="knav">
+								<a href="adm_dashboard.html">
+									<span class="icon-dashboard"></span>
+									<span class="txt">Dashboard</span>
+								</a>
+							</div>
+						</li>
+						<li >
+							<div class="knav">
+								<a href="inventory.html">
+									<span class="icon-inventory"></span>
+									<span class="txt">Inventory</span>
+								</a>
+							</div>
+						</li>
+						<li class="has-drop">
+							<div class="knav">
+								<a href="report.html">
+									<span class="icon-evaluation"></span>
+									<span class="txt">Sale Report</span>
+								</a>
+								<button type="button"><span class="icon-arrow-right"></span></button>
+							</div>
+						</li>
+						<li class="has-drop">
+							<div class="knav">
+								<a href="product.html">
+									<span class="icon-product"></span>
+									<span class="txt">Product</span>
+								</a>
+								<button type="button"><span class="icon-arrow-right"></span></button>
+							</div>
+							<div class="kdrop">
+								<ul>
+									<li><a href="category.html">Category</a></li>
+								</ul>
+							</div>
+						</li>
+						<li class="has-drop">
+							<div class="knav">
+								<a href="orders.html">
+									<span class="icon-order"></span>
+									<span class="txt">Orders</span>
+								</a>
+								<button type="button"><span class="icon-arrow-right"></span></button>
+							</div>
+						</li>
+						<li class="has-drop">
+							<div class="knav">
+								<a href="media.html">
+									<span class="icon-filter_list"></span>
+									<span class="txt">Media</span>
+								</a>
+								<button type="button"><span class="icon-keyboard_arrow_right"></span></button>
+							</div>
+						</li>
+						<li class="has-drop">
+							<div class="knav">
+								<a href="manageuser.html">
+									<span class="icon-setting"></span>
+									<span class="txt">Manage User</span>
+								</a>
+								<button type="button"><span class="icon-arrow-right"></span></button>
+							</div>
+							<div class="kdrop">
+								<ul>
+									<li><a href="addgroup.html">Add group</a></li>
+								</ul>
+							</div>
+						</li>
+						<li class="has-drop">
+							<div class="knav">
+								<a href="login.html">
+									<span class="icon-logout"></span>
+									<span class="txt">Log Out</span>
+								</a>
+								<button type="button"><span class="icon-arrow-right"></span></button>
+							</div>
+						</li>
+					</ul>
+				</nav>
 			</aside>
 			<section class="workboard inventorypg">
 				<div class="workboard__heading">
@@ -144,200 +144,197 @@
 					<div class="overall-info" >
 						<div class="row">
 							<div class="col xs-12">
-								<div class="info">
+								<form class="general--form access__form info">
 									<div class="row">
 										<div class="col xs-12 sx-6">
 											<span>New Product</span>
 										</div>
 										<div class="col xs-12 sx-6">
-											<form action="get">
-												<div class="site-panel">
-													<div class="form__action">
-														<input type="submit" class="button tertiary-line" value="Discard">
-													</div>
-													<div class="form__action">
-													</span><input type="submit" class="button primary-tint" value="Save">
+											<div class="site-panel">
+												<div class="form__action">
+													<input type="submit" class="button tertiary-line" value="Discard">
+												</div>
+												<div class="form__action">
+													<input type="submit" class="button primary-tint" value="Save">
 												</div>
 											</div>
-										</form>
-									</div>
-								</div>
-							</div>
-							<form class="general--form access__form">
-								<div class="row">
-									<div class="col xs-12 sm-3">
-										<div class="form__module">
-											<label for="prodname" class="form__label">Product Name</label>
-											<div class="form__set">
-												<input type="text" id="prodname" placeholder="Product Name">
-											</div>
 										</div>
 									</div>
-									<div class="col xs-12 sm-3">
-										<div class="form__module">
-											<label for="prodID" class="form__label">Product ID</label>
-											<div class="form__set">
-												<input type="tel" id="prodID" placeholder="Product ID">
-											</div>
-										</div>
-									</div>
-									<div class="col xs-12 sm-3">
-										<div class="form__module">
-											<label for="prodcat" class="form__label">Category</label>
-											<div class="form__set">
-												<input type="text" id="prodcat" placeholder="Category">
-											</div>
-										</div>
-									</div>
-									<div class="col xs-12 sm-3">
-										<div class="form__module">
-											<label for="prodbuying" class="form__label">Buying Price</label>
-											<div class="form__set">
-												<input type="tel" id="prodbuying" placeholder="Buying Price">
-											</div>
-										</div>
-									</div>
-									<div class="col xs-12 sm-3">
-										<div class="form__module">
-											<label for="prodbuying" class="form__label">Buying Price</label>
-											<div class="form__set">
-												<input type="tel" id="prodbuying" placeholder="Buying Price">
-											</div>
-										</div>
-									</div>
-									<div class="col xs-12 sm-3">
-										<div class="form__module">
-											<label for="prodqty" class="form__label">Quantity</label>
-											<div class="form__set">
-												<input type="tel" id="prodqty" placeholder="Quantity">
-											</div>
-										</div>
-									</div>
-									<div class="col xs-12 sm-3">
-										<div class="form__module">
-											<label for="prodexpiry" class="form__label">Expiry Date</label>
-											<div class="form__set">
-												<input type="date" id="prodexpiry" placeholder="Expiry">
-											</div>
-										</div>
-									</div>
-									<div class="col xs-12 sm-3">
-										<div class="form__module">
-											<label for="prodthrhold" class="form__label">Threshold Value</label>
-											<div class="form__set">
-												<input type="tel" id="prodthrhold" placeholder="Threshold Value">
-											</div>
-										</div>
-									</div>
-								</div>
-							</form>
-						</div>
-					</div>
-				</div>
-				<div class="meta-info">
-					<div class="row">
-						<div class="col xs-12 sm-6">
-							<div class="dropdown">
-								<select name="" id="">
-									<option value="">September, 2024 </option>
-									<option value="">October, 2024 </option>
-									<option value="">November, 2024 </option>
-									<option value="">December, 2024 </option>
-									<option value="">January, 2024 </option>
-									<option value="">Feburary, 2024 </option>
-									<option value="">March, 2024 </option>
-									<option value="">April, 2024 </option>
-									<option value="">May, 2024 </option>
-									<option value="">June, 2024 </option>
-									<option value="">July, 2024 </option>
-									<option value="">August, 2024 </option>
-								</select>
-							</div>
-						</div>
-						<div class="col xs-12 sm-6">
-							<form action="get">
-								<div class="site-panel">
-									<div class="form__module">
-										<div class="form__set ">
-											<span class="icon-search"></span>
-											<input class="search-input" type="search" placeholder="Search">
-										</div>
-									</div>
-									<div class="downoad">
-										<a href=""><span class="icon-download"></span>Download</a>
-									</div>
-								</div>
-							</form>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col xs-12">
-							<div class="questionaries__showcase">
-								<div class="tbl-wrap">
-									<table id="tracking__table">
-										<thead>
-											<tr>
-												<th>S.N</th>
-												<th>Product Title</th>
-												<th>Categories</th>
-												<th>In-Stock</th>
-												<th>Buying Price</th>
-												<th>Selling Price</th>
-												<th>Product Added</th>
-												<th>Action</th>
-											</tr>
-										</thead>
-										<tbody>
-											<tr>
-												<td>1</td>
-												<td>Wheat</td>
-												<td>Categories</td>
-												<td>In-Stock</td>
-												<td>Buying Price</td>
-												<td>Selling Price</td>
-												<td>Product Added</td>
-												<td ><a href="#"><span class="icon-trash"></span></a><a href="#"><span class="icon-edit"></span></a></td>
-											</tr>
-											<tr>
-												<td>1</td>
-												<td>Wheat</td>
-												<td>Categories</td>
-												<td>In-Stock</td>
-												<td>Buying Price</td>
-												<td>Selling Price</td>
-												<td>Product Added</td>
-												<td ><a href="#"><span class="icon-trash"></span></a><a href="#"><span class="icon-edit"></span></a></td>
-											</tr>
-											<tr>
-												<td>1</td>
-												<td>Wheat</td>
-												<td>Categories</td>
-												<td>In-Stock</td>
-												<td>Buying Price</td>
-												<td>Selling Price</td>
-												<td>Product Added</td>
-												<td ><a href="#"><span class="icon-trash"></span></a><a href="#"><span class="icon-edit"></span></a></td>
-											</tr>
 
-										</tbody>
-									</table>
-								</div>
-							</div>
-							<div class="pagination">
-								<ul class="paging">
-									<li><a href="#"><span class="icon-keyboard_arrow_left"></span class=""></a></li>
-									<li><a href="#">1</a></li>
-									<li><a href="#">2</a></li>
-									<li><a href="#">3</a></li>
-									<li><a href="#">4</a></li>
-									<li><a href="#"><span class="icon-keyboard_arrow_right"></span></a></li>
-								</ul>
+									<div class="row">
+										<div class="col xs-12 sm-3">
+											<div class="form__module">
+												<label for="prodname" class="form__label">Product Name</label>
+												<div class="form__set">
+													<input type="text" id="prodname" placeholder="Product Name">
+												</div>
+											</div>
+										</div>
+										<div class="col xs-12 sm-3">
+											<div class="form__module">
+												<label for="prodID" class="form__label">Product ID</label>
+												<div class="form__set">
+													<input type="tel" id="prodID" placeholder="Product ID">
+												</div>
+											</div>
+										</div>
+										<div class="col xs-12 sm-3">
+											<div class="form__module">
+												<label for="prodcat" class="form__label">Category</label>
+												<div class="form__set">
+													<input type="text" id="prodcat" placeholder="Category">
+												</div>
+											</div>
+										</div>
+										<div class="col xs-12 sm-3">
+											<div class="form__module">
+												<label for="prodbuying" class="form__label">Buying Price</label>
+												<div class="form__set">
+													<input type="tel" id="prodbuying" placeholder="Buying Price">
+												</div>
+											</div>
+										</div>
+										<div class="col xs-12 sm-3">
+											<div class="form__module">
+												<label for="prodbuying" class="form__label">Buying Price</label>
+												<div class="form__set">
+													<input type="tel" id="prodbuying" placeholder="Buying Price">
+												</div>
+											</div>
+										</div>
+										<div class="col xs-12 sm-3">
+											<div class="form__module">
+												<label for="prodqty" class="form__label">Quantity</label>
+												<div class="form__set">
+													<input type="tel" id="prodqty" placeholder="Quantity">
+												</div>
+											</div>
+										</div>
+										<div class="col xs-12 sm-3">
+											<div class="form__module">
+												<label for="prodexpiry" class="form__label">Expiry Date</label>
+												<div class="form__set">
+													<input type="date" id="prodexpiry" placeholder="Expiry">
+												</div>
+											</div>
+										</div>
+										<div class="col xs-12 sm-3">
+											<div class="form__module">
+												<label for="prodthrhold" class="form__label">Threshold Value</label>
+												<div class="form__set">
+													<input type="tel" id="prodthrhold" placeholder="Threshold Value">
+												</div>
+											</div>
+										</div>
+									</div>
+								</form>
 							</div>
 						</div>
 					</div>
-				</div>
-			</section>
-		</main>
+					<div class="meta-info">
+						<div class="row">
+							<div class="col xs-12 sm-6">
+								<div class="dropdown">
+									<select name="" id="">
+										<option value="">September, 2024 </option>
+										<option value="">October, 2024 </option>
+										<option value="">November, 2024 </option>
+										<option value="">December, 2024 </option>
+										<option value="">January, 2024 </option>
+										<option value="">Feburary, 2024 </option>
+										<option value="">March, 2024 </option>
+										<option value="">April, 2024 </option>
+										<option value="">May, 2024 </option>
+										<option value="">June, 2024 </option>
+										<option value="">July, 2024 </option>
+										<option value="">August, 2024 </option>
+									</select>
+								</div>
+							</div>
+							<div class="col xs-12 sm-6">
+								<form action="get">
+									<div class="site-panel">
+										<div class="form__module">
+											<div class="form__set ">
+												<span class="icon-search"></span>
+												<input class="search-input" type="search" placeholder="Search">
+											</div>
+										</div>
+										<div class="downoad">
+											<a href=""><span class="icon-download"></span>Download</a>
+										</div>
+									</div>
+								</form>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col xs-12">
+								<div class="questionaries__showcase">
+									<div class="tbl-wrap">
+										<table id="tracking__table">
+											<thead>
+												<tr>
+													<th>S.N</th>
+													<th>Product Title</th>
+													<th>Categories</th>
+													<th>In-Stock</th>
+													<th>Buying Price</th>
+													<th>Selling Price</th>
+													<th>Product Added</th>
+													<th>Action</th>
+												</tr>
+											</thead>
+											<tbody>
+												<tr>
+													<td>1</td>
+													<td>Wheat</td>
+													<td>Categories</td>
+													<td>In-Stock</td>
+													<td>Buying Price</td>
+													<td>Selling Price</td>
+													<td>Product Added</td>
+													<td ><a href="#"><span class="icon-trash"></span></a><a href="#"><span class="icon-edit"></span></a></td>
+												</tr>
+												<tr>
+													<td>1</td>
+													<td>Wheat</td>
+													<td>Categories</td>
+													<td>In-Stock</td>
+													<td>Buying Price</td>
+													<td>Selling Price</td>
+													<td>Product Added</td>
+													<td ><a href="#"><span class="icon-trash"></span></a><a href="#"><span class="icon-edit"></span></a></td>
+												</tr>
+												<tr>
+													<td>1</td>
+													<td>Wheat</td>
+													<td>Categories</td>
+													<td>In-Stock</td>
+													<td>Buying Price</td>
+													<td>Selling Price</td>
+													<td>Product Added</td>
+													<td ><a href="#"><span class="icon-trash"></span></a><a href="#"><span class="icon-edit"></span></a></td>
+												</tr>
+
+											</tbody>
+										</table>
+									</div>
+								</div>
+								<div class="pagination">
+									<ul class="paging">
+										<li><a href="#"><span class="icon-keyboard_arrow_left"></span class=""></a></li>
+										<li><a href="#">1</a></li>
+										<li><a href="#">2</a></li>
+										<li><a href="#">3</a></li>
+										<li><a href="#">4</a></li>
+										<li><a href="#"><span class="icon-keyboard_arrow_right"></span></a></li>
+									</ul>
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
+			</main>
 			<!-- <footer class="site__footer">
 				<span class="copy">&copy; Copyright</span>
 			</footer> -->
