--- a/markup/product.html
+++ b/markup/product.html
@@ -145,22 +145,23 @@
 						<div class="row">
 							<div class="col xs-12">
 								<form class="general--form access__form info">
-									<div class="row">
-										<div class="col xs-12 sx-6">
-											<span>New Product</span>
-										</div>
-										<div class="col xs-12 sx-6">
-											<div class="site-panel">
-												<div class="form__action">
-													<input type="submit" class="button tertiary-line" value="Discard">
-												</div>
-												<div class="form__action">
-													<input type="submit" class="button primary-tint" value="Save">
+									<div class="info">
+										<div class="row">
+											<div class="col xs-12 sx-6">
+												<span>New Product</span>
+											</div>
+											<div class="col xs-12 sx-6">
+												<div class="site-panel">
+													<div class="form__action">
+														<input type="submit" class="button tertiary-line" value="Discard">
+													</div>
+													<div class="form__action">
+														<input type="submit" class="button primary-tint" value="Save">
+													</div>
 												</div>
 											</div>
 										</div>
 									</div>
-
 									<div class="row">
 										<div class="col xs-12 sm-3">
 											<div class="form__module">
