--- a/markup/adm_dashboard.html
+++ b/markup/adm_dashboard.html
@@ -222,38 +222,39 @@
 								<div class="row">
 									<div class="col xs-12">
 										<h2 class="subheading">Selling Products</h2>
-										<table>
-											<thead>
-												<tr>
-													<th>Title</th>
-													<th>Total Sold</th>
-													<th>Total Quantity</th>
-												</tr>
-											</thead>
-											<tbody>
-												<tr>
-													<td>Foldable Mini Drone</td>
-													<td>1</td>
-													<td>21</td>
-												</tr>
-												<tr>
-													<td>Foldable Mini Drone</td>
-													<td>1</td>
-													<td>21</td>
-												</tr>
-												<tr>
-													<td>Foldable Mini Drone</td>
-													<td>1</td>
-													<td>21</td>
-												</tr>
-												<tr>
-													<td>Foldable Mini Drone</td>
-													<td>1</td>
-													<td>21</td>
-												</tr>
-											</tbody>
-										</table>
-										<a href="#">Show All</a>
+										<div class="tbl-wrap">
+											<table>
+												<thead>
+													<tr>
+														<th>Title</th>
+														<th>Total Sold</th>
+														<th>Total Quantity</th>
+													</tr>
+												</thead>
+												<tbody>
+													<tr>
+														<td>Foldable Mini Drone</td>
+														<td>1</td>
+														<td>21</td>
+													</tr>
+													<tr>
+														<td>Foldable Mini Drone</td>
+														<td>1</td>
+														<td>21</td>
+													</tr>
+													<tr>
+														<td>Foldable Mini Drone</td>
+														<td>1</td>
+														<td>21</td>
+													</tr>
+													<tr>
+														<td>Foldable Mini Drone</td>
+														<td>1</td>
+														<td>21</td>
+													</tr>
+												</tbody>
+											</table>
+										</div>
 									</div>
 								</div>
 							</div>
