--- a/markup/addgroup.html
+++ b/markup/addgroup.html
@@ -120,7 +120,7 @@
 							</div>
 							<div class="kdrop">
 								<ul>
-									<li><a href="addgroup.html">Add group</a></li>
+									<li><a href="listgroup.html">List group</a></li>
 								</ul>
 							</div>
 						</li>
