--- a/markup/adm_dashboard.html
+++ b/markup/adm_dashboard.html
@@ -75,7 +75,7 @@
 									<span class="icon-evaluation"></span>
 									<span class="txt">Sale Report</span>
 								</a>
-								<button type="button"><span class="icon-keyboard_arrow_right"></span></button>
+								<button type="button"><span class="icon-arrow-right"></span></button>
 							</div>
 						</li>
 						<li class="has-drop">
@@ -84,7 +84,7 @@
 									<span class="icon-product"></span>
 									<span class="txt">Product</span>
 								</a>
-								<button type="button"><span class="icon-keyboard_arrow_right"></span></button>
+								<button type="button"><span class="icon-arrow-right"></span></button>
 							</div>
 							<div class="kdrop">
 								<ul>
@@ -98,7 +98,7 @@
 									<span class="icon-order"></span>
 									<span class="txt">Orders</span>
 								</a>
-								<button type="button"><span class="icon-keyboard_arrow_right"></span></button>
+								<button type="button"><span class="icon-arrow-right"></span></button>
 							</div>
 						</li>
 						<li class="has-drop">
@@ -116,11 +116,11 @@
 									<span class="icon-setting"></span>
 									<span class="txt">Manage User</span>
 								</a>
-								<button type="button"><span class="icon-keyboard_arrow_right"></span></button>
+								<button type="button"><span class="icon-arrow-right"></span></button>
 							</div>
 							<div class="kdrop">
 								<ul>
-									<li><a href="addgroup.html">Add group</a></li>
+									<li><a href="listgroup.html">List group</a></li>
 								</ul>
 							</div>
 						</li>
@@ -130,7 +130,7 @@
 									<span class="icon-logout"></span>
 									<span class="txt">Log Out</span>
 								</a>
-								<button type="button"><span class="icon-keyboard_arrow_right"></span></button>
+								<button type="button"><span class="icon-arrow-right"></span></button>
 							</div>
 						</li>
 					</ul>
