--- a/markup/inview.html
+++ b/markup/inview.html
@@ -170,7 +170,7 @@
 											<ul>
 												<li><a href="view.html">Overview</a></li>
 												<li><a href="inhistory.html">History</a></li>
-												<li><a href="purchase.html"></span>Purchases</a></li>
+												<li><a href="purchase.html">Purchases</a></li>
 											</ul>
 										</div>
 									</div>
