--- a/markup/product.html
+++ b/markup/product.html
@@ -334,8 +334,9 @@
 							</div>
 						</div>
 					</div>
-				</section>
-			</main>
+				</div>
+			</section>
+		</main>
 			<!-- <footer class="site__footer">
 				<span class="copy">&copy; Copyright</span>
 			</footer> -->
