--- a/markup/adm_dashboard.html
+++ b/markup/adm_dashboard.html
@@ -43,7 +43,7 @@
 				</div>
 			</div>
 		</header>
-		<main id="site__main" class="site__main adm-dashboard__main">
+		<main id="site__main" class="site__main">
 			<aside class="worksidebar ">
 				<form class="general--form pnlsearch__form">
 					<div class="form__set">
@@ -137,224 +137,226 @@
 				</nav>
 			</aside>
 			<section class="workboard">
-				<div class="workboard__heading">
-					<h1 class="workboard__title">Dashboard</h1>
-				</div>
-				<div class="workpanel">
-					<div class="row">
-						<div class="col xs-12 sx-8">
-							<div class="row">
-								<div class="col xs-12">
-									<div class="date">
-										<input type="date" />
-									</div>
-								</div>
-							</div>
-							<div class="insights">
-								<div class="row">
-									<div class="col xs-12 sm-3">
-										<div class="panel">
-											<div class="sales">
-												<div class="middle">
-													<div class="left">
-														<h3>Users</h3>
-														<h1>5</h1>
-													</div>
-													<div class="progress">
-														<span class="icon-user"></span>
-													</div>
-												</div>
-												<small class="text-muted">Last 24 hours</small>
-											</div>
-										</div>
-									</div>
-									<div class="col xs-12 sm-3">
-										<div class="panel">
-											<div class="sales">
-												<div class="middle">
-													<div class="left">
-														<h3>Categories</h3>
-														<h1>7</h1>
-													</div>
-													<div class="progress">
-														<span class="icon-filter_list"></span>
-													</div>
-												</div>
-												<small class="text-muted">Last 24 hours</small>
-											</div>
-										</div>
-									</div>
-									<div class="col xs-12 sm-3">
-										<div class="panel">
-											<div class="expenses">
-												<div class="middle">
-													<div class="left">
-														<h3>Products</h3>
-														<h1>8</h1>
-													</div>
-													<div class="progress">
-														<span class="icon-product"></span>
-													</div>
-												</div>
-												<small class="text-muted">Last 24 hours</small>
-											</div>
-										</div>
-									</div>
-									<div class="col xs-12 sm-3">
-										<div class="panel">
-											<div class="income">
-												<div class="middle">
-													<div class="left">
-														<h3>Sales</h3>
-														<h1>1000</h1>
-													</div>
-													<div class="progress">
-														<span class="icon-receipt"></span>
-													</div>
-												</div>
-												<small class="text-muted">Last 24 hours</small>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="recent-orders">
+				<div class="adm-dashboard__main">
+					<div class="workboard__heading">
+						<h1 class="workboard__title">Dashboard</h1>
+					</div>
+					<div class="workpanel">
+						<div class="row">
+							<div class="col xs-12 sx-8">
 								<div class="row">
 									<div class="col xs-12">
-										<h2 class="subheading">Selling Products</h2>
-										<div class="tbl-wrap">
-											<table>
-												<thead>
-													<tr>
-														<th>Title</th>
-														<th>Total Sold</th>
-														<th>Total Quantity</th>
-													</tr>
-												</thead>
-												<tbody>
-													<tr>
-														<td>Foldable Mini Drone</td>
-														<td>1</td>
-														<td>21</td>
-													</tr>
-													<tr>
-														<td>Foldable Mini Drone</td>
-														<td>1</td>
-														<td>21</td>
-													</tr>
-													<tr>
-														<td>Foldable Mini Drone</td>
-														<td>1</td>
-														<td>21</td>
-													</tr>
-													<tr>
-														<td>Foldable Mini Drone</td>
-														<td>1</td>
-														<td>21</td>
-													</tr>
-												</tbody>
-											</table>
+										<div class="date">
+											<input type="date" />
+										</div>
+									</div>
+								</div>
+								<div class="insights">
+									<div class="row">
+										<div class="col xs-12 sm-3">
+											<div class="panel">
+												<div class="sales">
+													<div class="middle">
+														<div class="left">
+															<h3>Users</h3>
+															<h1>5</h1>
+														</div>
+														<div class="progress">
+															<span class="icon-user"></span>
+														</div>
+													</div>
+													<small class="text-muted">Last 24 hours</small>
+												</div>
+											</div>
+										</div>
+										<div class="col xs-12 sm-3">
+											<div class="panel">
+												<div class="sales">
+													<div class="middle">
+														<div class="left">
+															<h3>Categories</h3>
+															<h1>7</h1>
+														</div>
+														<div class="progress">
+															<span class="icon-filter_list"></span>
+														</div>
+													</div>
+													<small class="text-muted">Last 24 hours</small>
+												</div>
+											</div>
+										</div>
+										<div class="col xs-12 sm-3">
+											<div class="panel">
+												<div class="expenses">
+													<div class="middle">
+														<div class="left">
+															<h3>Products</h3>
+															<h1>8</h1>
+														</div>
+														<div class="progress">
+															<span class="icon-product"></span>
+														</div>
+													</div>
+													<small class="text-muted">Last 24 hours</small>
+												</div>
+											</div>
+										</div>
+										<div class="col xs-12 sm-3">
+											<div class="panel">
+												<div class="income">
+													<div class="middle">
+														<div class="left">
+															<h3>Sales</h3>
+															<h1>1000</h1>
+														</div>
+														<div class="progress">
+															<span class="icon-receipt"></span>
+														</div>
+													</div>
+													<small class="text-muted">Last 24 hours</small>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="recent-orders">
+									<div class="row">
+										<div class="col xs-12">
+											<h2 class="subheading">Selling Products</h2>
+											<div class="tbl-wrap">
+												<table>
+													<thead>
+														<tr>
+															<th>Title</th>
+															<th>Total Sold</th>
+															<th>Total Quantity</th>
+														</tr>
+													</thead>
+													<tbody>
+														<tr>
+															<td>Foldable Mini Drone</td>
+															<td>1</td>
+															<td>21</td>
+														</tr>
+														<tr>
+															<td>Foldable Mini Drone</td>
+															<td>1</td>
+															<td>21</td>
+														</tr>
+														<tr>
+															<td>Foldable Mini Drone</td>
+															<td>1</td>
+															<td>21</td>
+														</tr>
+														<tr>
+															<td>Foldable Mini Drone</td>
+															<td>1</td>
+															<td>21</td>
+														</tr>
+													</tbody>
+												</table>
+											</div>
 										</div>
 									</div>
 								</div>
 							</div>
-						</div>
-						<div class="col xs-12 sx-6 sm-4">
-							<div class="recent-updates">
-								<h2 class="subheading" >Recent Updates</h2>
-								<div class="updates">
-									<div class="update">
-										<div class="message">
-											<div class="profile-photo">
-												<img src="images/img1.svg" alt="" />
+							<div class="col xs-12 sx-6 sm-4">
+								<div class="recent-updates">
+									<h2 class="subheading" >Recent Updates</h2>
+									<div class="updates">
+										<div class="update">
+											<div class="message">
+												<div class="profile-photo">
+													<img src="images/img1.svg" alt="" />
+												</div>
+												<div class="msg--info">
+													<p>
+														<span class="product"><b>Small Bubble Cushioning Wrap</b></span>
+													</p>
+													<small class="details">Packing Material</small>
+												</div>
 											</div>
-											<div class="msg--info">
-												<p>
-													<span class="product"><b>Small Bubble Cushioning Wrap</b></span>
-												</p>
-												<small class="details">Packing Material</small>
-											</div>
-										</div>
-										<div class="sales">
-											<div class="amunt">
-												<span class="amount">Rs.5000</span>
-											</div>
-										</div>
-									</div>
-									<div class="update">
-										<div class="message">
-											<div class="profile-photo">
-												<img src="images/img1.svg" alt="" />
-											</div>
-											<div class="msg--info">
-												<p>
-													<span class="product"><b>Small Bubble Cushioning Wrap</b></span>
-												</p>
-												<small class="details">Packing Material</small>
+											<div class="sales">
+												<div class="amunt">
+													<span class="amount">Rs.5000</span>
+												</div>
 											</div>
 										</div>
-										<div class="sales">
-											<div class="amunt">
-												<span class="amount">Rs.5000</span>
+										<div class="update">
+											<div class="message">
+												<div class="profile-photo">
+													<img src="images/img1.svg" alt="" />
+												</div>
+												<div class="msg--info">
+													<p>
+														<span class="product"><b>Small Bubble Cushioning Wrap</b></span>
+													</p>
+													<small class="details">Packing Material</small>
+												</div>
+											</div>
+											<div class="sales">
+												<div class="amunt">
+													<span class="amount">Rs.5000</span>
+												</div>
 											</div>
 										</div>
-									</div>
-									<div class="update">
-										<div class="message">
-											<div class="profile-photo">
-												<img src="images/img1.svg" alt="" />
+										<div class="update">
+											<div class="message">
+												<div class="profile-photo">
+													<img src="images/img1.svg" alt="" />
+												</div>
+												<div class="msg--info">
+													<p>
+														<span class="product"><b>Small Bubble Cushioning Wrap</b></span>
+													</p>
+													<small class="details">Packing Material</small>
+												</div>
 											</div>
-											<div class="msg--info">
-												<p>
-													<span class="product"><b>Small Bubble Cushioning Wrap</b></span>
-												</p>
-												<small class="details">Packing Material</small>
+											<div class="sales">
+												<div class="amunt">
+													<span class="amount">Rs.5000</span>
+												</div>
 											</div>
 										</div>
-										<div class="sales">
-											<div class="amunt">
-												<span class="amount">Rs.5000</span>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="sales-analytics">
-								<h2 class="subheading">Sales Analytics</h2>
-								<div class="item online">
-									<div class="right">
-										<div class="info">
-											<h3 class="productname">Wheat</h3>
-											<small class="text-muted">Last 24 Hours</small>
-										</div>
-										<span class="total sales"><b>8966</b></span>
 									</div>
 								</div>
-								<div class="item online">
-									<div class="right">
-										<div class="info">
-											<h3 class="productname">Wheat</h3>
-											<small class="text-muted">Last 24 Hours</small>
+								<div class="sales-analytics">
+									<h2 class="subheading">Sales Analytics</h2>
+									<div class="item online">
+										<div class="right">
+											<div class="info">
+												<h3 class="productname">Wheat</h3>
+												<small class="text-muted">Last 24 Hours</small>
+											</div>
+											<span class="total sales"><b>8966</b></span>
 										</div>
-										<span class="total sales"><b>8966</b></span>
 									</div>
-								</div>
-								<div class="item online">
-									<div class="right">
-										<div class="info">
-											<h3 class="productname">Wheat</h3>
-											<small class="text-muted">Last 24 Hours</small>
+									<div class="item online">
+										<div class="right">
+											<div class="info">
+												<h3 class="productname">Wheat</h3>
+												<small class="text-muted">Last 24 Hours</small>
+											</div>
+											<span class="total sales"><b>8966</b></span>
 										</div>
-										<span class="total sales"><b>8966</b></span>
 									</div>
-								</div>
-								<div class="item online">
-									<div class="right">
-										<div class="info">
-											<h3 class="productname">Wheat</h3>
-											<small class="text-muted">Last 24 Hours</small>
+									<div class="item online">
+										<div class="right">
+											<div class="info">
+												<h3 class="productname">Wheat</h3>
+												<small class="text-muted">Last 24 Hours</small>
+											</div>
+											<span class="total sales"><b>8966</b></span>
 										</div>
-										<span class="total sales"><b>8966</b></span>
+									</div>
+									<div class="item online">
+										<div class="right">
+											<div class="info">
+												<h3 class="productname">Wheat</h3>
+												<small class="text-muted">Last 24 Hours</small>
+											</div>
+											<span class="total sales"><b>8966</b></span>
+										</div>
 									</div>
 								</div>
 							</div>
