--- a/markup/inventory.html
+++ b/markup/inventory.html
@@ -43,7 +43,7 @@
 				</div>
 			</div>
 		</header>
-		<main id="site__main" class="site__main inventory__main">
+		<main id="site__main" class="site__main ">
 			<aside class="worksidebar">
 				<form class="general--form pnlsearch__form">
 					<div class="form__set">
@@ -134,102 +134,111 @@
 						</li>
 					</ul>
 				</nav><nav class="site__nav">
-						<ul>
-							<li>
-								<div class="knav">
-									<a href="adm_dashboard.html">
-										<span class="icon-dashboard"></span>
-										<span class="txt">Dashboard</span>
-									</a>
-								</div>
-							</li>
-							<li >
-								<div class="knav">
-									<a href="inventory.html">
-										<span class="icon-inventory"></span>
-										<span class="txt">Inventory</span>
-									</a>
-								</div>
-							</li>
-							<li class="has-drop">
-								<div class="knav">
-									<a href="report.html">
-										<span class="icon-evaluation"></span>
-										<span class="txt">Sale Report</span>
-									</a>
-									<button type="button"><span class="icon-arrow-right"></span></button>
-								</div>
-							</li>
-							<li class="has-drop">
-								<div class="knav">
-									<a href="product.html">
-										<span class="icon-product"></span>
-										<span class="txt">Product</span>
-									</a>
-									<button type="button"><span class="icon-arrow-right"></span></button>
-								</div>
-								<div class="kdrop">
-									<ul>
-										<li><a href="category.html">Category</a></li>
-									</ul>
-								</div>
-							</li>
-							<li class="has-drop">
-								<div class="knav">
-									<a href="orders.html">
-										<span class="icon-order"></span>
-										<span class="txt">Orders</span>
-									</a>
-									<button type="button"><span class="icon-arrow-right"></span></button>
-								</div>
-							</li>
-							<li class="has-drop">
-								<div class="knav">
-									<a href="media.html">
-										<span class="icon-filter_list"></span>
-										<span class="txt">Media</span>
-									</a>
-									<button type="button"><span class="icon-keyboard_arrow_right"></span></button>
-								</div>
-							</li>
-							<li class="has-drop">
-								<div class="knav">
-									<a href="manageuser.html">
-										<span class="icon-setting"></span>
-										<span class="txt">Manage User</span>
-									</a>
-									<button type="button"><span class="icon-arrow-right"></span></button>
-								</div>
-								<div class="kdrop">
-									<ul>
-										<li><a href="addgroup.html">Add group</a></li>
-									</ul>
-								</div>
-							</li>
-							<li class="has-drop">
-								<div class="knav">
-									<a href="login.html">
-										<span class="icon-logout"></span>
-										<span class="txt">Log Out</span>
-									</a>
-									<button type="button"><span class="icon-arrow-right"></span></button>
-								</div>
-							</li>
-						</ul>
-					</nav>
+					<ul>
+						<li>
+							<div class="knav">
+								<a href="adm_dashboard.html">
+									<span class="icon-dashboard"></span>
+									<span class="txt">Dashboard</span>
+								</a>
+							</div>
+						</li>
+						<li >
+							<div class="knav">
+								<a href="inventory.html">
+									<span class="icon-inventory"></span>
+									<span class="txt">Inventory</span>
+								</a>
+							</div>
+						</li>
+						<li class="has-drop">
+							<div class="knav">
+								<a href="report.html">
+									<span class="icon-evaluation"></span>
+									<span class="txt">Sale Report</span>
+								</a>
+								<button type="button"><span class="icon-arrow-right"></span></button>
+							</div>
+						</li>
+						<li class="has-drop">
+							<div class="knav">
+								<a href="product.html">
+									<span class="icon-product"></span>
+									<span class="txt">Product</span>
+								</a>
+								<button type="button"><span class="icon-arrow-right"></span></button>
+							</div>
+							<div class="kdrop">
+								<ul>
+									<li><a href="category.html">Category</a></li>
+								</ul>
+							</div>
+						</li>
+						<li class="has-drop">
+							<div class="knav">
+								<a href="orders.html">
+									<span class="icon-order"></span>
+									<span class="txt">Orders</span>
+								</a>
+								<button type="button"><span class="icon-arrow-right"></span></button>
+							</div>
+						</li>
+						<li class="has-drop">
+							<div class="knav">
+								<a href="media.html">
+									<span class="icon-filter_list"></span>
+									<span class="txt">Media</span>
+								</a>
+								<button type="button"><span class="icon-keyboard_arrow_right"></span></button>
+							</div>
+						</li>
+						<li class="has-drop">
+							<div class="knav">
+								<a href="manageuser.html">
+									<span class="icon-setting"></span>
+									<span class="txt">Manage User</span>
+								</a>
+								<button type="button"><span class="icon-arrow-right"></span></button>
+							</div>
+							<div class="kdrop">
+								<ul>
+									<li><a href="addgroup.html">Add group</a></li>
+								</ul>
+							</div>
+						</li>
+						<li class="has-drop">
+							<div class="knav">
+								<a href="login.html">
+									<span class="icon-logout"></span>
+									<span class="txt">Log Out</span>
+								</a>
+								<button type="button"><span class="icon-arrow-right"></span></button>
+							</div>
+						</li>
+					</ul>
+				</nav>
 			</aside>
 			<section class="workboard inventorypg">
 				<div class="workboard__heading">
 					<h1 class="workboard__title">Time Tracking</h1>
 				</div>
-				<div class="workpanel">
+				<div class="workpanel inventory__main">
 					<div class="overall-info">
 						<div class="row">
 							<div class="col xs-12">
 								<div class="info">
 									<div class="row">
-										<div class="col xs-12 sx-12">
+										<div class="col xs-12 sx-6">
 											<span>Overall Inventory</span>
+										</div>
+										<div class="col xs-12 sx-6">
+											<form action="get">
+												<div class="site-panel">
+													<div class="form__action">
+														<span class="icon-add"></span><input type="submit" class="button primary-tint" value="Add Products">
+													</div>
+												</div>
+											</form>
 										</div>
 									</div>
 								</div>
@@ -330,138 +339,126 @@
 							</div>
 						</div>
 					</div>
-				</div>
-				<div class="meta-info">
-					<div class="row">
-						<div class="col xs-12 sm-6">
-							<div class="dropdown">
-								<select name="" id="">
-									<option value="">September, 2024 </option>
-									<option value="">October, 2024 </option>
-									<option value="">November, 2024 </option>
-									<option value="">December, 2024 </option>
-									<option value="">January, 2024 </option>
-									<option value="">Feburary, 2024 </option>
-									<option value="">March, 2024 </option>
-									<option value="">April, 2024 </option>
-									<option value="">May, 2024 </option>
-									<option value="">June, 2024 </option>
-									<option value="">July, 2024 </option>
-									<option value="">August, 2024 </option>
-								</select>
+					<div class="meta-info">
+						<div class="row">
+							<div class="col xs-12 sm-6">
+								<div class="dropdown">
+									<select name="" id="">
+										<option value="">September, 2024 </option>
+										<option value="">October, 2024 </option>
+										<option value="">November, 2024 </option>
+										<option value="">December, 2024 </option>
+										<option value="">January, 2024 </option>
+										<option value="">Feburary, 2024 </option>
+										<option value="">March, 2024 </option>
+										<option value="">April, 2024 </option>
+										<option value="">May, 2024 </option>
+										<option value="">June, 2024 </option>
+										<option value="">July, 2024 </option>
+										<option value="">August, 2024 </option>
+									</select>
+								</div>
 							</div>
-						</div>
-						<div class="col xs-12 sm-6">
-							<form action="get">
-								<div class="site-panel">
-									<div class="form__module">
-										<div class="form__set ">
-											<span class="icon-search"></span>
-											<input class="search-input" type="search" placeholder="Search">
+							<div class="col xs-12 sm-6">
+								<form action="get">
+									<div class="site-panel">
+										<div class="form__module">
+											<div class="form__set ">
+												<span class="icon-search"></span>
+												<input class="search-input" type="search" placeholder="Search">
+											</div>
+										</div>
+										<div class="downoad">
+											<a href=""><span class="icon-download"></span>Download</a>
 										</div>
 									</div>
-									<div class="downoad">
-										<a href=""><span class="icon-download"></span>Download</a>
-									</div>
-								</div>
-							</form>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col xs-12">
-						<div class="questionaries__showcase" id="question_popup" style="display: flex;">
-							<div class="tbl-wrap">
-								<table id="tracking__table">
-									<thead>
-										<tr>
-											<th class="dtser">Product ID</th>
-											<th>Product</th>
-											<th>Category</th>
-											<th>Quantity</th>
-											<th>Expiry</th>
-											<th>Bying Price</th>
-											<th>Thershold Value</th>
-											<th>Status</th>
-											<th>Action</th>
-										</tr>
-									</thead>
-									<tbody>
-										<tr>
-											<td data-label="Product ID">231</td>
-											<td data-label="Product">Maggi</td>
-											<td data-label="Category">Snacks</td>
-											<td data-label="Quantity">100 packets</td>
-											<td data-label="Expiry">2024/10/20</td>
-											<td data-label="Bying Price">Rs.430</td>
-											<td data-label="Thershold Value">12 Packets</td>
-											<td data-label="Status">In-Stock</td>
-											<td data-label="Action"><a href="inview.html"><span class="icon-trash"></span></a><a href="#"><span class="icon-edit"></span></a></td>
-										</tr>
-										<tr>
-											<td data-label="Product ID">251</td>
-											<td data-label="Product">Red Bull</td>
-											<td data-label="Category">Beverage</td>
-											<td data-label="Quantity">50 packets</td>
-											<td data-label="Expiry">2024/10/20</td>
-											<td data-label="Bying Price">Rs.300</td>
-											<td data-label="Thershold Value">6 Packets</td>
-											<td data-label="Status">Out of Stock</td>
-											<td data-label="Action"><a href="inview.html"><span class="icon-trash"></span></a><a href="#"><span class="icon-edit"></span></a></td>
-										</tr>
-										<tr>
-											<td data-label="Product ID">251</td>
-											<td data-label="Product">Red Bull</td>
-											<td data-label="Category">Beverage</td>
-											<td data-label="Quantity">50 packets</td>
-											<td data-label="Expiry">2024/10/20</td>
-											<td data-label="Bying Price">Rs.300</td>
-											<td data-label="Thershold Value">6 Packets</td>
-											<td data-label="Status">Out of Stock</td>
-											<td data-label="Action"><a href="inview.html"><span class="icon-trash"></span></a><a href="#"><span class="icon-edit"></span></a></td>
-										</tr>
-										<tr>
-											<td data-label="Product ID">251</td>
-											<td data-label="Product">Red Bull</td>
-											<td data-label="Category">Beverage</td>
-											<td data-label="Quantity">50 packets</td>
-											<td data-label="Expiry">2024/10/20</td>
-											<td data-label="Bying Price">Rs.300</td>
-											<td data-label="Thershold Value">6 Packets</td>
-											<td data-label="Status">Out of Stock</td>
-											<td data-label="Action"><a href="inview.html"><span class="icon-trash"></span></a><a href="#"><span class="icon-edit"></span></a></td>
-										</tr>
-										<tr>
-											<td data-label="Product ID">251</td>
-											<td data-label="Product">Red Bull</td>
-											<td data-label="Category">Beverage</td>
-											<td data-label="Quantity">50 packets</td>
-											<td data-label="Expiry">2024/10/20</td>
-											<td data-label="Bying Price">Rs.300</td>
-											<td data-label="Thershold Value">6 Packets</td>
-											<td data-label="Status">Out of Stock</td>
-											<td data-label="Action"><a href="inview.html"><span class="icon-trash"></span></a><a href="#"><span class="icon-edit"></span></a></td>
-										</tr>
-									</tbody>
-								</table>
+								</form>
 							</div>
 						</div>
-						<!-- <div class="pagination">
-							<ul class="paging">
-								<li><a href="#"><span class="icon-keyboard_arrow_left"></span class=""></a></li>
-								<li><a href="#">1</a></li>
-								<li><a href="#">2</a></li>
-								<li><a href="#">3</a></li>
-								<li><a href="#">4</a></li>
-								<li><a href="#"><span class="icon-keyboard_arrow_right"></span></a></li>
-							</ul>
-						</div> -->
+						<div class="row">
+							<div class="col xs-12">
+								<div class="questionaries__showcase" id="question_popup" style="display: flex;">
+									<div class="tbl-wrap">
+										<table id="tracking__table">
+											<thead>
+												<tr>
+													<th class="dtser">Product ID</th>
+													<th>Product</th>
+													<th>Category</th>
+													<th>Quantity</th>
+													<th>Expiry</th>
+													<th>Bying Price</th>
+													<th>Thershold Value</th>
+													<th>Status</th>
+													<th>Action</th>
+												</tr>
+											</thead>
+											<tbody>
+												<tr>
+													<td data-label="Product ID">231</td>
+													<td data-label="Product">Maggi</td>
+													<td data-label="Category">Snacks</td>
+													<td data-label="Quantity">100 packets</td>
+													<td data-label="Expiry">2024/10/20</td>
+													<td data-label="Bying Price">Rs.430</td>
+													<td data-label="Thershold Value">12 Packets</td>
+													<td data-label="Status">In-Stock</td>
+													<td data-label="Action"><a href="inview.html"><span class="icon-trash"></span></a><a href="#"><span class="icon-edit"></span></a></td>
+												</tr>
+												<tr>
+													<td data-label="Product ID">251</td>
+													<td data-label="Product">Red Bull</td>
+													<td data-label="Category">Beverage</td>
+													<td data-label="Quantity">50 packets</td>
+													<td data-label="Expiry">2024/10/20</td>
+													<td data-label="Bying Price">Rs.300</td>
+													<td data-label="Thershold Value">6 Packets</td>
+													<td data-label="Status">Out of Stock</td>
+													<td data-label="Action"><a href="inview.html"><span class="icon-trash"></span></a><a href="#"><span class="icon-edit"></span></a></td>
+												</tr>
+												<tr>
+													<td data-label="Product ID">251</td>
+													<td data-label="Product">Red Bull</td>
+													<td data-label="Category">Beverage</td>
+													<td data-label="Quantity">50 packets</td>
+													<td data-label="Expiry">2024/10/20</td>
+													<td data-label="Bying Price">Rs.300</td>
+													<td data-label="Thershold Value">6 Packets</td>
+													<td data-label="Status">Out of Stock</td>
+													<td data-label="Action"><a href="inview.html"><span class="icon-trash"></span></a><a href="#"><span class="icon-edit"></span></a></td>
+												</tr>
+												<tr>
+													<td data-label="Product ID">251</td>
+													<td data-label="Product">Red Bull</td>
+													<td data-label="Category">Beverage</td>
+													<td data-label="Quantity">50 packets</td>
+													<td data-label="Expiry">2024/10/20</td>
+													<td data-label="Bying Price">Rs.300</td>
+													<td data-label="Thershold Value">6 Packets</td>
+													<td data-label="Status">Out of Stock</td>
+													<td data-label="Action"><a href="inview.html"><span class="icon-trash"></span></a><a href="#"><span class="icon-edit"></span></a></td>
+												</tr>
+												<tr>
+													<td data-label="Product ID">251</td>
+													<td data-label="Product">Red Bull</td>
+													<td data-label="Category">Beverage</td>
+													<td data-label="Quantity">50 packets</td>
+													<td data-label="Expiry">2024/10/20</td>
+													<td data-label="Bying Price">Rs.300</td>
+													<td data-label="Thershold Value">6 Packets</td>
+													<td data-label="Status">Out of Stock</td>
+													<td data-label="Action"><a href="inview.html"><span class="icon-trash"></span></a><a href="#"><span class="icon-edit"></span></a></td>
+												</tr>
+											</tbody>
+										</table>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
-
-			</div>
-		</section>
-	</main>
+			</section>
+		</main>
 			<!-- <footer class="site__footer">
 				<span class="copy">&copy; Copyright</span>
 			</footer> -->
