--- a/markup/listgroup.html
+++ b/markup/listgroup.html
@@ -215,7 +215,8 @@
 											</tbody>
 										</table>
 									</div>
-									</div><!-- 
+								</div>
+									<!-- 
 									<div class="pagination">
 										<ul class="paging">
 											<li><a href="#"><span class="icon-keyboard_arrow_left"></span class=""></a></li>
